Change url link in nav

--- a/public/index.html
+++ b/public/index.html
@@ -24,32 +24,32 @@
             <div class="hidden lg:block ml-20 mr-20">
               <ul class="flex text-sm">
                 <li class="px-4">
-                  <a href="/public/index.html">
+                  <a href="/index.html">
                     Home
                   </a>
                 </li>
                 <li class="px-4">
-                  <a href="/public/about.html">
+                  <a href="/about.html">
                     About
                   </a>
                 </li>
                 <li class="px-4">
-                  <a href="#">
+                  <a href="/portofolio.html">
                     Portfolio
                   </a>
                 </li>
                 <li class="px-4">
-                  <a href="#">
+                  <a href="/product.html">
                     Product
                   </a>
                 </li>
                 <li class="px-4">
-                  <a href="#">
+                  <a href="/career.html">
                     Career
                   </a>
                 </li>
                 <li class="px-4">
-                  <a href="">
+                  <a href="/blog.html">
                     Blog
                   </a>
                 </li>
