--- a/public/about.html
+++ b/public/about.html
@@ -327,13 +327,13 @@
           </div>
         </div>
         <div class="flex flex-wrap">
-          <img src="./img/pic2.jpg" alt="" id="img-gallery" class="p-2 w-1/2" />
-          <img src="./img/pic3.jpg" alt="" id="img-gallery" class="p-2 w-1/2" />
+          <img src="./img/pic2.png" alt="" id="img-gallery" class="p-2 w-1/2" />
+          <img src="./img/pic3.png" alt="" id="img-gallery" class="p-2 w-1/2" />
         </div>
         <div class="flex flex-wrap">
-          <img src="./img/pic4.jpg" alt="" id="img-gallery" class="p-2 w-1/2" />
-          <img src="./img/pic5.jpg" alt="" id="img-gallery" class="p-2 w-1/2" />
-          <img src="./img/pic6.jpg" alt="" id="img-gallery" class="p-2" />
+          <img src="./img/pic4.png" alt="" id="img-gallery" class="p-2 w-1/2" />
+          <img src="./img/pic5.png" alt="" id="img-gallery" class="p-2 w-1/2" />
+          <img src="./img/pic6.png" alt="" id="img-gallery" class="p-2" />
         </div>
       </div>
     </section>
