Change font size breadcrumb in md view

--- a/public/about.html
+++ b/public/about.html
@@ -116,7 +116,7 @@
     <!-- End Header -->
 
     <section class="container px-6 mt-6 text-center">
-      <h1 class="text-xl font-normal">
+      <h1 class="text-xl font-normal md:text-3xl">
         <span class="font-semibold">About</span>
         Us
       </h1>
