adjust gallery for md & lg view

--- a/public/about.html
+++ b/public/about.html
@@ -308,32 +308,33 @@
     <!-- End Speciality section -->
 
     <!-- Gallery Section -->
-    <section class="container px-6 mt-16">
-      <div class="text-center">
-        <h1 class="text-xl">
+    <section class="container px-6 mt-16 md:mt-32 md:px-20">
+      <div class="text-center md:mb-8">
+        <h1 class="text-xl md:text-2xl">
           Our Featured
           <span class="font-semibold">Gallery</span>
         </h1>
       </div>
-      <div class="mt-4">
-        <div class="relative">
-          <img src="./img/pic1.png" alt="" id="img-gallery" class="p-2" />
-          <div class="absolute bottom-0 text-white px-4 ml-3 mb-8">
-            <h6 class="text-base">Dumini Soliman's</h6>
-            <p class="text-xs font-light">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-              Expedita, perferendis
-            </p>
+      <div class="mt-4 lg:flex flex-wrap">
+        <div class="lg:w-1/2">
+          <div class="relative">
+            <img src="./img/pic1.png" alt="" id="img-gallery" class="p-2" />
+            <div class="absolute bottom-0 text-white px-4 ml-3 mb-8">
+              <h6 class="text-base">Dumini Soliman's</h6>
+              <p class="text-xs font-light lg:mt-2">
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusantium reprehenderit est vitae quibusdam cupiditate voluptatibus magni illum suscipit nam nobis!
+              </p>
+            </div>
+          </div>
+          <div class="flex flex-wrap">
+            <img src="./img/pic2.png" alt="" id="img-gallery" class="p-2 w-1/2" />
+            <img src="./img/pic3.png" alt="" id="img-gallery" class="p-2 w-1/2" />
           </div>
         </div>
-        <div class="flex flex-wrap">
-          <img src="./img/pic2.png" alt="" id="img-gallery" class="p-2 w-1/2" />
-          <img src="./img/pic3.png" alt="" id="img-gallery" class="p-2 w-1/2" />
-        </div>
-        <div class="flex flex-wrap">
+        <div class="flex flex-wrap lg:w-1/2">
           <img src="./img/pic4.png" alt="" id="img-gallery" class="p-2 w-1/2" />
           <img src="./img/pic5.png" alt="" id="img-gallery" class="p-2 w-1/2" />
-          <img src="./img/pic6.png" alt="" id="img-gallery" class="p-2" />
+          <img src="./img/pic6.png" alt="" id="img-gallery" class="p-2 md:w-full" />
         </div>
       </div>
     </section>
