Adding link url to mobile toogle navigation

--- a/public/index.html
+++ b/public/index.html
@@ -107,12 +107,36 @@
         <ul
           class="flex flex-col items-end px-8 absolute right-0 w-full bg-white"
         >
-          <li class="py-3 border-b">Home</li>
-          <li class="py-3 border-b">About</li>
-          <li class="py-3 border-b">Portfolio</li>
-          <li class="py-3 border-b">Product</li>
-          <li class="py-3 border-b">Career</li>
-          <li class="py-3 border-b">Blog</li>
+          <li class="py-3 border-b">
+            <a href="/index.html">
+              Home
+            </a>
+          </li>
+          <li class="py-3 border-b">
+            <a href="/about.html">
+              About
+            </a>
+          </li>
+          <li class="py-3 border-b">
+            <a href="/portofolio.html">
+              Portofolio
+            </a>
+          </li>
+          <li class="py-3 border-b">
+            <a href="/product.html">
+              Product
+            </a>
+          </li>
+          <li class="py-3 border-b">
+            <a href="/career.html">
+              Career
+            </a>
+          </li>
+          <li class="py-3 border-b">
+            <a href="/blog.html">
+              Blog
+            </a>
+          </li>
         </ul>
       </div>
     </header>
