--- a/public/product.html
+++ b/public/product.html
@@ -21,32 +21,32 @@
             <div class="hidden lg:block ml-20 mr-20">
               <ul class="flex text-sm">
                 <li class="px-4">
-                  <a href="/public/index.html">
+                  <a href="/index.html">
                     Home
                   </a>
                 </li>
                 <li class="px-4">
-                  <a href="/public/about.html">
+                  <a href="/about.html">
                     About
                   </a>
                 </li>
                 <li class="px-4">
-                  <a href="#">
+                  <a href="/portofolio.html">
                     Portfolio
                   </a>
                 </li>
                 <li class="px-4">
-                  <a href="#">
+                  <a href="/product.html">
                     Product
                   </a>
                 </li>
                 <li class="px-4">
-                  <a href="#">
+                  <a href="/career.html">
                     Career
                   </a>
                 </li>
                 <li class="px-4">
-                  <a href="">
+                  <a href="/blog.html">
                     Blog
                   </a>
                 </li>
@@ -104,12 +104,36 @@
         <ul
           class="flex flex-col items-end px-8 absolute right-0 w-full bg-white"
         >
-          <li class="py-3 border-b">Home</li>
-          <li class="py-3 border-b">About</li>
-          <li class="py-3 border-b">Portfolio</li>
-          <li class="py-3 border-b">Product</li>
-          <li class="py-3 border-b">Career</li>
-          <li class="py-3 border-b">Blog</li>
+          <li class="py-3 border-b">
+            <a href="/index.html">
+              Home
+            </a>
+          </li>
+          <li class="py-3 border-b">
+            <a href="/about.html">
+              About
+            </a>
+          </li>
+          <li class="py-3 border-b">
+            <a href="/portofolio.html">
+              Portofolio
+            </a>
+          </li>
+          <li class="py-3 border-b">
+            <a href="/product.html">
+              Product
+            </a>
+          </li>
+          <li class="py-3 border-b">
+            <a href="/career.html">
+              Career
+            </a>
+          </li>
+          <li class="py-3 border-b">
+            <a href="/blog.html">
+              Blog
+            </a>
+          </li>
         </ul>
       </div>
     </header>
